[package]
name = "lsproxy"
version = "0.2.4"
edition = "2021"

[lib]
name = "lsproxy"
path = "src/lib.rs"


[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
url = "2.3"
regex = { version = "1.8", features = ["std"] }
serde_json = "1.0"
strum = "0.25"
strum_macros = "0.25"
tokio = { version = "1.0", features = ["full", "process"] }
utoipa = { version = "5.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8.0", features = ["actix-web"] }
rand = "0.8"
async-trait = "0.1"
futures = "0.3"
lsp-types = "0.94"
glob = "0.3.1"
uuid = { version = "1.10.0", features = ["v4"] }
ignore = "0.4.23"
clap = { version = "4.3", features = ["derive"] }
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
fs_extra = "1.3.0"
json5 = "0.4.1"
ast-grep-core = "0.31.1"
syn = { version = "2.0", features = ["full", "visit"] }
tempfile = "3.8.1"
once_cell = "1.19"
tree-sitter-typescript = "0.23.2"
tree-sitter = "0.24.6"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.23.2"
streaming-iterator = "0.1.9"
tree-sitter-go = "0.23.4"
jsonwebtoken = "9.2"
futures-util = "0.3"
tree-sitter-java = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-php = "0.23.11"

[dev-dependencies]
tempfile = "3.8.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[profile.release]
incremental = true

[profile.dev]
incremental = true
