[tool.poetry]
name = "lsproxy-mcp"
version = "0.1.0"
description = "MCP server for lsproxy"
authors = ["Devin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
httpx = "^0.28.1"
pydantic-settings = "^2.6.1"
mcp = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
